# megapong

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_log.txt  compile_commands.json
.cache/clangd/index/: aux.c.20713ADE1063D97E.idx  aux.h.614D875A46AD9D07.idx  auxiliar.c.3E083B3A3DA299A3.idx  auxiliar.h.5B1E1D7BF43F6ED7.idx  ball.c.2157603AE90182D0.idx  ball.h.5F143366F79867C0.idx  game.c.C11EF0514AB8A585.idx  game.h.29126568824433B0.idx  gameconst.h.7FDD3AA254C0A7AA.idx  joystick.c.2861E343E7A4A4AA.idx  joystick.h.CFB4BE536AB039BD.idx  main.c.84AADC9A48054415.idx  player.c.AE43FFC89ACCE6E7.idx  player.h.FBD9E6BD25C6AA7A.idx  resources.h.42AF1F46279F27D3.idx  rom_head.c.BB59287CE97A1150.idx
res/: resources.res
src/: aux.c  ball.c  game.c  joystick.c  main.c  player.c
src/include/: aux.h  ball.h  game.h  joystick.h  player.h
tutorial/: MegaPongTutorial1.md  MegaPongTutorial2.md  MegaPongTutorial3.md  MegaPongTutorial4.md  MegaPongTutorial5.md  MegaPongTutorial6.md  MegaPongTutorial7.md  MegaPongTutorial8.md  MegaPongTutorial9.md  MegaPongTutorialBONUS.md
